--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# FROM: https://gist.github.com/GhostofGoes/94580e76cd251972b15b4821c8a06f59
+# Source du présent fichier .gitignore: https://gist.github.com/GhostofGoes/94580e76cd251972b15b4821c8a06f59
 
 # Editors
 .vscode/
